--- a/Harden System Security/Strings/he-IL/Resources.resw
+++ b/Harden System Security/Strings/he-IL/Resources.resw
@@ -4304,9 +4304,6 @@
   <data name="SystemTime.Text" xml:space="preserve">
     <value>זמן מערכת</value>
   </data>
-  <data name="TimeZone.Text" xml:space="preserve">
-    <value>אזור זמן</value>
-  </data>
   <data name="User.Text" xml:space="preserve">
     <value>משתמש</value>
   </data>
@@ -4324,9 +4321,6 @@
   </data>
   <data name="AppRAMUsage.Text" xml:space="preserve">
     <value>שימוש בזיכרון RAM של היישום</value>
-  </data>
-  <data name="StorageSize.Text" xml:space="preserve">
-    <value>גודל האחסון</value>
   </data>
   <data name="InternetSpeed.Text" xml:space="preserve">
     <value>מהירות אינטרנט</value>
@@ -5022,7 +5016,7 @@
   </data>
   <data name="WindowsFirewallNoFilesSelectedWarningMessage" xml:space="preserve">
     <value>לא נבחר קובץ ליצירת כללי חומת אש.</value>
-  </data> 
+  </data>
   <data name="WindowsFirewallRulesCreatedSuccessMessage" xml:space="preserve">
     <value>כללי חומת האש נוצרו בהצלחה עבור {0} קבצים שנבחרו.</value>
   </data>
@@ -5056,5 +5050,47 @@
   </data>
   <data name="SuccessfullyRetrievedFirewallRulesMessage" xml:space="preserve">
     <value>אוחזרו בהצלחה {0} כללי חומת אש שנוצרו על ידי האפליקציה Harden System Security.</value>
+  </data>
+    <data name="LastBootTime.Text" xml:space="preserve">
+    <value>זמן אתחול אחרון</value>
+  </data>
+  <data name="SystemModel.Text" xml:space="preserve">
+    <value>דגם המערכת</value>
+  </data>
+  <data name="OpenNetworkPorts.Text" xml:space="preserve">
+    <value>יציאות רשת פתוחות</value>
+  </data>
+  <data name="EnterNewName" xml:space="preserve">
+    <value>הזן שם חדש</value>
+  </data>
+  <data name="NewComputerName" xml:space="preserve">
+    <value>שם מחשב חדש</value>
+  </data>
+  <data name="NeedAdminToRenamePCMsg" xml:space="preserve">
+    <value>עליך להפעיל יישום זה כמנהל מערכת כדי לשנות את שם המחשב.</value>
+  </data>
+  <data name="EnterANameForThisPCMsg" xml:space="preserve">
+    <value>הזן שם חדש למחשב זה. תידרש הפעלה מחדש כדי שהשינויים ייכנסו לתוקף.</value>
+  </data>
+  <data name="RenameComputer" xml:space="preserve">
+    <value>שינוי שם מחשב</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>שנה שם</value>
+  </data>
+  <data name="SuccessfullyRenamedPCTo" xml:space="preserve">
+    <value>שם המחשב הוגדר כ-'{0}'. עליך להפעיל מחדש את המחשב כדי שהשינויים ייכנסו לתוקף באופן מלא.</value>
+  </data>
+  <data name="FailedToRenamePCError" xml:space="preserve">
+    <value>הגדרת שם המחשב נכשלה. קוד שגיאה: {0}</value>
+  </data>
+  <data name="GPUDetails" xml:space="preserve">
+    <value>פרטי מעבד גרפי</value>
+  </data>
+  <data name="PowerPlan.Text" xml:space="preserve">
+    <value>תוכנית צריכת חשמל</value>
+  </data>
+  <data name="StorageSizeAndTemp.Text" xml:space="preserve">
+    <value>נפח אחסון וטמפרטורה</value>
   </data>
 </root>
