--- a/AppControl Manager/Strings/AR/Resources.resw
+++ b/AppControl Manager/Strings/AR/Resources.resw
@@ -6164,9 +6164,6 @@
   <data name="AppRAMUsage.Text" xml:space="preserve">
     <value>استخدام ذاكرة RAM للتطبيق</value>
   </data>
-  <data name="StorageSize.Text" xml:space="preserve">
-    <value>سعة التخزين</value>
-  </data>
   <data name="InternetSpeed.Text" xml:space="preserve">
     <value>سرعة الإنترنت</value>
   </data>
@@ -6316,5 +6313,47 @@
   </data>
   <data name="ConvertXMLToBinarySettingsCard.AutomationProperties.HelpText" xml:space="preserve">
     <value>استعرض ملفات سياسة XML لتحويلها إلى ملفات CIP ثنائية</value>
+  </data>
+    <data name="LastBootTime.Text" xml:space="preserve">
+    <value>وقت التمهيد الأخير</value>
+  </data>
+  <data name="SystemModel.Text" xml:space="preserve">
+    <value>طراز النظام</value>
+  </data>
+  <data name="OpenNetworkPorts.Text" xml:space="preserve">
+    <value>منافذ الشبكة المفتوحة</value>
+  </data>
+  <data name="EnterNewName" xml:space="preserve">
+    <value>أدخل اسماً جديداً</value>
+  </data>
+  <data name="NewComputerName" xml:space="preserve">
+    <value>اسم الكمبيوتر الجديد</value>
+  </data>
+  <data name="NeedAdminToRenamePCMsg" xml:space="preserve">
+    <value>يجب تشغيل هذا التطبيق كمسؤول لإعادة تسمية الكمبيوتر.</value>
+  </data>
+  <data name="EnterANameForThisPCMsg" xml:space="preserve">
+    <value>أدخل اسماً جديداً لهذا الكمبيوتر. ستكون إعادة التشغيل مطلوبة لتصبح التغييرات سارية المفعول.</value>
+  </data>
+  <data name="RenameComputer" xml:space="preserve">
+    <value>إعادة تسمية الكمبيوتر</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>إعادة تسمية</value>
+  </data>
+  <data name="SuccessfullyRenamedPCTo" xml:space="preserve">
+    <value>تم تعيين اسم الكمبيوتر إلى '{0}'. يجب إعادة تشغيل الكمبيوتر لتصبح التغييرات سارية المفعول بالكامل.</value>
+  </data>
+  <data name="FailedToRenamePCError" xml:space="preserve">
+    <value>فشل تعيين اسم الكمبيوتر. رمز الخطأ: {0}</value>
+  </data>
+  <data name="GPUDetails" xml:space="preserve">
+    <value>تفاصيل GPU</value>
+  </data>
+  <data name="PowerPlan.Text" xml:space="preserve">
+    <value>خطة الطاقة</value>
+  </data>
+  <data name="StorageSizeAndTemp.Text" xml:space="preserve">
+    <value>حجم التخزين ودرجة الحرارة</value>
   </data>
 </root>
