--- a/Harden System Security/Strings/el-GR/Resources.resw
+++ b/Harden System Security/Strings/el-GR/Resources.resw
@@ -4304,9 +4304,6 @@
   <data name="SystemTime.Text" xml:space="preserve">
     <value>Ώρα συστήματος</value>
   </data>
-  <data name="TimeZone.Text" xml:space="preserve">
-    <value>Ζώνη ώρας</value>
-  </data>
   <data name="User.Text" xml:space="preserve">
     <value>Χρήστης</value>
   </data>
@@ -4324,9 +4321,6 @@
   </data>
   <data name="AppRAMUsage.Text" xml:space="preserve">
     <value>Χρήση μνήμης RAM εφαρμογής</value>
-  </data>
-  <data name="StorageSize.Text" xml:space="preserve">
-    <value>Χωρητικότητα αποθήκευσης</value>
   </data>
   <data name="InternetSpeed.Text" xml:space="preserve">
     <value>Ταχύτητα διαδικτύου</value>
@@ -5022,7 +5016,7 @@
   </data>
   <data name="WindowsFirewallNoFilesSelectedWarningMessage" xml:space="preserve">
     <value>Δεν επιλέχθηκε αρχείο για τη δημιουργία κανόνων Τείχους προστασίας.</value>
-  </data> 
+  </data>
   <data name="WindowsFirewallRulesCreatedSuccessMessage" xml:space="preserve">
     <value>Οι κανόνες Τείχους προστασίας δημιουργήθηκαν με επιτυχία για {0} επιλεγμένα αρχεία.</value>
   </data>
@@ -5056,5 +5050,47 @@
   </data>
   <data name="SuccessfullyRetrievedFirewallRulesMessage" xml:space="preserve">
     <value>Ανακτήθηκαν με επιτυχία {0} κανόνες Τείχους προστασίας που δημιουργήθηκαν από την εφαρμογή Harden System Security.</value>
+  </data>
+    <data name="LastBootTime.Text" xml:space="preserve">
+    <value>Τελευταία ώρα εκκίνησης</value>
+  </data>
+  <data name="SystemModel.Text" xml:space="preserve">
+    <value>Μοντέλο συστήματος</value>
+  </data>
+  <data name="OpenNetworkPorts.Text" xml:space="preserve">
+    <value>Ανοιχτές θύρες δικτύου</value>
+  </data>
+  <data name="EnterNewName" xml:space="preserve">
+    <value>Εισαγάγετε νέο όνομα</value>
+  </data>
+  <data name="NewComputerName" xml:space="preserve">
+    <value>Νέο όνομα υπολογιστή</value>
+  </data>
+  <data name="NeedAdminToRenamePCMsg" xml:space="preserve">
+    <value>Πρέπει να εκτελέσετε αυτήν την εφαρμογή ως Διαχειριστής για να μετονομάσετε τον υπολογιστή.</value>
+  </data>
+  <data name="EnterANameForThisPCMsg" xml:space="preserve">
+    <value>Εισαγάγετε ένα νέο όνομα για αυτόν τον υπολογιστή. Θα απαιτηθεί επανεκκίνηση για να τεθούν σε ισχύ οι αλλαγές.</value>
+  </data>
+  <data name="RenameComputer" xml:space="preserve">
+    <value>Μετονομασία υπολογιστή</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>Μετονομασία</value>
+  </data>
+  <data name="SuccessfullyRenamedPCTo" xml:space="preserve">
+    <value>Το όνομα του υπολογιστή ορίστηκε σε '{0}'. Πρέπει να επανεκκινήσετε τον υπολογιστή σας για να εφαρμοστούν πλήρως οι αλλαγές.</value>
+  </data>
+  <data name="FailedToRenamePCError" xml:space="preserve">
+    <value>Απέτυχε ο ορισμός του ονόματος υπολογιστή. Κωδικός σφάλματος: {0}</value>
+  </data>
+  <data name="GPUDetails" xml:space="preserve">
+    <value>Λεπτομέρειες GPU</value>
+  </data>
+  <data name="PowerPlan.Text" xml:space="preserve">
+    <value>Σχέδιο παροχής ενέργειας</value>
+  </data>
+  <data name="StorageSizeAndTemp.Text" xml:space="preserve">
+    <value>Μέγεθος αποθήκευσης και θερμοκρασία</value>
   </data>
 </root>
