--- a/Harden System Security/Strings/en-US/Resources.resw
+++ b/Harden System Security/Strings/en-US/Resources.resw
@@ -4304,9 +4304,6 @@ Thumbprint: {3}</value>
   <data name="SystemTime.Text" xml:space="preserve">
     <value>System Time</value>
   </data>
-  <data name="TimeZone.Text" xml:space="preserve">
-    <value>Time Zone</value>
-  </data>
   <data name="User.Text" xml:space="preserve">
     <value>User</value>
   </data>
@@ -4324,9 +4321,6 @@ Thumbprint: {3}</value>
   </data>
   <data name="AppRAMUsage.Text" xml:space="preserve">
     <value>App RAM Usage</value>
-  </data>
-  <data name="StorageSize.Text" xml:space="preserve">
-    <value>Storage Size</value>
   </data>
   <data name="InternetSpeed.Text" xml:space="preserve">
     <value>Internet Speed</value>
@@ -5022,7 +5016,7 @@ Thumbprint: {3}</value>
   </data>
   <data name="WindowsFirewallNoFilesSelectedWarningMessage" xml:space="preserve">
     <value>No file selected for creating Firewall Rules.</value>
-  </data> 
+  </data>
   <data name="WindowsFirewallRulesCreatedSuccessMessage" xml:space="preserve">
     <value>Firewall rules created successfully for {0} selected files.</value>
   </data>
@@ -5056,5 +5050,47 @@ Thumbprint: {3}</value>
   </data>
   <data name="SuccessfullyRetrievedFirewallRulesMessage" xml:space="preserve">
     <value>Successfully retrieved {0} Firewall rules created by the Harden System Security app.</value>
+  </data>
+    <data name="LastBootTime.Text" xml:space="preserve">
+    <value>Last Boot Time</value>
+  </data>
+  <data name="SystemModel.Text" xml:space="preserve">
+    <value>System Model</value>
+  </data>
+  <data name="OpenNetworkPorts.Text" xml:space="preserve">
+    <value>Open Network Ports</value>
+  </data>
+  <data name="EnterNewName" xml:space="preserve">
+    <value>Enter a new name</value>
+  </data>
+  <data name="NewComputerName" xml:space="preserve">
+    <value>New Computer Name</value>
+  </data>
+  <data name="NeedAdminToRenamePCMsg" xml:space="preserve">
+    <value>You must run this application as an Administrator to rename the computer.</value>
+  </data>
+  <data name="EnterANameForThisPCMsg" xml:space="preserve">
+    <value>Enter a new name for this computer. A restart will be required for changes to take effect.</value>
+  </data>
+  <data name="RenameComputer" xml:space="preserve">
+    <value>Rename Computer</value>
+  </data>
+  <data name="Rename" xml:space="preserve">
+    <value>Rename</value>
+  </data>
+  <data name="SuccessfullyRenamedPCTo" xml:space="preserve">
+    <value>The computer name has been set to '{0}'. You must restart your computer for the changes to take full effect.</value>
+  </data>
+  <data name="FailedToRenamePCError" xml:space="preserve">
+    <value>Failed to set computer name. Error code: {0}</value>
+  </data>
+  <data name="GPUDetails" xml:space="preserve">
+    <value>GPU Details</value>
+  </data>
+  <data name="PowerPlan.Text" xml:space="preserve">
+    <value>Power Plan</value>
+  </data>
+  <data name="StorageSizeAndTemp.Text" xml:space="preserve">
+    <value>Storage Size and Temperature</value>
   </data>
 </root>
